--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=${PORT:8080}
 
 # PostgreSQL Database Connection
 # Uses Railway's environment variables, with your local details as the fallback
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:railway_reservation_db}
-spring.datasource.username=${PGUSER:postgres}
-spring.datasource.password=${PGPASSWORD:Dp@1412}
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:your_database_name}
+spring.datasource.username=${PGUSER:your_userid}
+spring.datasource.password=${PGPASSWORD:ypur_password}
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -21,7 +21,7 @@ application.security.jwt.secret-key=472D4B6150645367566B597033733676397924422645
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=paridadhiraj20@gmail.com
-spring.mail.password=lkci ygmn okeq jsqf
+spring.mail.username=enter_your_mail_id
+spring.mail.password=Enter_your_App_Passwordd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
